# typofixer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  fly.toml  pyproject.toml  typofixer.service
tests/: test_fmt.py
typofixer/: cli.py  constants.py  cost_estimation.py  formatting.py  main.py
typos_web/: cli.py  constants.py  cost_estimation.py  directus.py  directus_schema.json  formatting.py  llm.py  main.py  usage.py
